<resources>
    <string name="app_name">Stock Hawk</string>
    <string name="action_settings">Settings</string>
    <string name="change">Change value</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">Stock Details</string>
    <string name="outdated_title">Update Error</string>
    <string name="outdated">Due to unavailability of internet list may be outdated or empty</string>
    <string name="firstTime">Swipe the list down to receive updates</string>
    <string name="stockInList">Stock already in the list</string>
    <string name="noNetwork">Internet Connection Required</string>
    <string name="noStock">No such stock available</string>
    <string name="lineChartDescription">Stock prices over time</string>
    <string name="lineChartYAxis">Stock Prices</string>
    <string name="noNetLineChart">Oops!Internet connection required</string>
    <string name="open">Open</string>
    <string name="mktCap">MktCap</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="high_52">52WkHigh</string>
    <string name="low_52">52WkLow</string>
    <string name="vol">Vol</string>
    <string name="pe">P/E</string>
    <string name="symbol_search">Search Symbol</string>
    <string name="stock_search">Search for a Stock Symbol</string>
    <string name="edit_hint">FB</string>
    <string name="ok">Ok</string>
    <string name="fab_content">Add new Stock</string>
    <string name="ok_content">Press to search symbol</string>
    <string-array name="spinnerList">
        <item>1W</item>
        <item>1M</item>
        <item>3M</item>
        <item>6M</item>
        <item>1Y</item>
    </string-array>
</resources>
