<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="4"
    android:id="@+id/grid_layout"
    android:padding="8dp"
    android:orientation="horizontal"
    android:background="@drawable/toolbar_background">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b3ffffff"
        android:text="@string/open"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/stock_open"
        android:layout_gravity="end"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b3ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/mktCap"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/stock_mkt"
        android:layout_gravity="end"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b3ffffff"
        android:layout_marginTop="15dp"
        android:text="@string/high"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/stock_d_high"
        android:layout_gravity="end"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b3ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/high_52"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/stock_y_high"
        android:layout_gravity="end"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b3ffffff"
        android:layout_marginTop="15dp"
        android:text="@string/low"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/stock_d_low"
        android:layout_gravity="end"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b3ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/low_52"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/stock_y_low"
        android:layout_gravity="end"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b3ffffff"
        android:layout_marginTop="15dp"
        android:text="@string/vol"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/stock_vol"
        android:layout_gravity="end"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b3ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/pe"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:id="@+id/stock_pe"
        android:layout_gravity="end"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp" />

</GridLayout>